Fixed bug #64726 (Segfault when calling fetch_object on a use_result and DB pointer has closed)